/' Modelo de clases de la liga de fútbol y sus relaciones principales. '/
@startuml Final

class Administrador {
    -IdAdmin: String
    -NombreCompleto: String
    -NombreUsuario: String
    -Contraseña: String
}
       
class Club {
    -IdClub: String
    -NombreClub: String
    -ContraseñaClub: String
    -NombrePresidente: String
    -AñoCreacion: Date
    -Estadio: String
}

class Jugador {
    -Nombre: String
    -Apellido: String
    -Cedula: Int
    -IdClub: String
    -FechaNacimiento: Date
    -Género: String
    -IdCategoria: String
}

class Boletin {
    -IdBoletín: String
    -FechaSubida: Date
    -IdAdmin: String
    -Título: String
}

class Sancion {
    -IdSancion: String
    -TipoSancion: String
    -CedulaJugadorAfectado: Int
    -MotivoSancion: String
    -FechasSuspension: Int
}

class Categoria {
    -IdCategoria: String
    -Anio: Int
}

class Formulario {
    -IdFormulario: String
    -ClubSubida: String
    -FechaSubida: Date
}

class CarnetAptitudFisica {
    -IdCarnet: String
    -FechaSubida: Date
    -FechaVencimiento: Date
    -CedulaJugador: Int
}

class Partido {
    -IdPartido: String
    -IdClubLocal: String
    -IdClubVisitante: String
    -GolesLocal: Int
    -GolesVisitante: Int
    -DuracionPartido: Int
    -Arbitro: String
    -Estadio: String
    -FechaPartido: Date
    -HoraPartido: String
}

Administrador "1" -- "0..*" Boletin: Sube
Categoria "1" -- "0..*" Jugador: Tiene
Jugador "1" -- "1" CarnetAptitudFisica: Tiene
Jugador "1" -- "0..*" Sancion: Recibe
Club "1" -- "0..*" Jugador: Tiene
Club "1" -- "0..*" Formulario: Sube
Club "1" -- "0..*" Partido : Local
Club "1" -- "0..*" Partido : Visitante

@enduml